Fixed layout issue

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -162,7 +162,7 @@ input[type="number"]:valid + #age-error::after{
     margin-left:0.5rem;
     color:rgb(13, 194, 13);
 }
-@media only screen and (max-width: 584px) {
+@media only screen and (max-width: 690px) {
     input[type="text"]:invalid + #name-error::after, input[type="email"]:invalid + #email-error::after, input[type="number"]:invalid + #age-error::after{
         margin-top: 1em;
         width:10.9rem;
